--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "clsx": "^1.1.1",
-    "next": "13.3.1-canary.1",
+    "next": "13.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
