--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.37",
+    "@types/react-dom": "18.0.11",
     "@headlessui/react": "^1.7.13",
     "clsx": "^1.1.1",
     "next": "13.3.1-canary.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
