Migrated to TypeScript, added ./src folder and changed (..)photos to (.)photos to fix a bug in latest next version

--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "clsx": "^1.1.1",
-    "next": "13.3.1-canary.1",
+    "next": "13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.3.1",
+    "@types/react": "^18.2.14",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "sass": "^1.49.9",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.1.3"
   }
 }
