feat: update readme

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "clsx": "^1.2.1",
-    "next": "13.4.7",
+    "next": "^14.0.2-canary.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
