--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "nextgram",
-  "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "clsx": "^1.2.1",
-    "next": "13.4.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
     "@types/node": "20.3.1",
     "@types/react": "^18.2.14",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "sass": "^1.63.6",
-    "tailwindcss": "^3.3.2",
+    "@types/react-dom": "^18.2.18",
+    "next": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.1.3"
   }
 }
