--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/node": "20.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.18",
-    "next": "canary",
+    "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.1.3"
