--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.18",
-    "next": "canary",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.1.3"
+    "@types/node": "20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "next": "15.0.0-canary.61",
+    "react": "^19.0.0-rc.0",
+    "react-dom": "^19.0.0-rc.0",
+    "typescript": "^5.5.3"
   }
 }
