--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/node": "20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "next": "15.0.0-canary.61",
+    "next": "latest",
     "react": "^19.0.0-rc.0",
     "react-dom": "^19.0.0-rc.0",
     "typescript": "^5.5.3"
